--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <title>Amaan Bhati Resume Website</title>
 </head>
 <body>
+    <div class="meta meta--1 ui ui--small glitch glitch--2">
+				<p></p><strong>experience</strong></p>
+				<p><strong>KIIT DIGITAL</strong> SDE Intern, Feb 2024 - Present</p>
+				<p><strong>Ziroh Labs</strong> EWL Project Trainee, Feb 2024 - Present</p>
+				<p><strong>KIITFEST TECH TEAM</strong> Web Developer, Dec 2023 - Feb 2024</p>
+				<p><strong>MICROSOFT LSA</strong> Web Dev Lead, Aug 2023 - Present</p>
+				<!-- <p><strong>Sculpted Threads</strong> Fullstack Dev, Jul 2023 - Aug 2023</p> -->
+				<p><strong>TEDX</strong> Frontend Developer, April 2023</p>
+				<p><strong>Zivri.me</strong> Threejs Web Developer, May 2023</p>
+				<p><strong>DIVERSION</strong> Open Source Web Developer, Jan 2023</p>
+			</div>
+            <div class="globe">
+                <span class="ring"></span>
+                <span class="ring"></span>
+                <span class="ring"></span>
+                <span class="ring"></span>
+                <span class="ring"></span>
+                <span class="ring"></span>
+                <span class="ring"></span>
+              </div>
     <script src="index.js"></script>
 </body>
 </html>
