--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amaan Bhati Resume Website</title>
+    <meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Amaan Bhati Resume Website</title>
+		<meta name="description" content="Amaan Bhati is a web developer based in India, who loves to build and craft smooth, friendky and optimised websites for a better customer experience. Amaan is also a tech enthusiast who loves to explore new tech stacks on a regular basis as a source of escapism" />
+		<meta name="keywords" content="amaan bhati resume, web developer, front end developer, software developer, javascript developer, tech enthusiast, web development lead" />
+		<meta name="author" content="Amaan" />
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="stylesheet" href="https://use.typekit.net/sma8eef.css"/>
+
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script>document.documentElement.className="js";</script>
 </head>
 <body>
     <div class="meta meta--1 ui ui--small glitch glitch--2">
